move template html in TemplateService and use RegisterConfig to map the WS template url

--- a/war/src/main/webapp/WEB-INF/classes/html/fr/invoiceTemplate.html
+++ b/war/src/main/webapp/WEB-INF/classes/html/fr/invoiceTemplate.html
@@ -1,4 +1,4 @@
-<div it-angular-blocks  extend-template="eur/rest/html/get" id="eur/rest/html/get">
+<div it-angular-blocks  extend-template="http://localhost:8080/eu/rest/html/get" id="http://localhost:8080/fr/rest/html/get">
     <!--Header is not overriden-->
     <div data-block-append="content">
         <div class="form-group">
