--- a/war/src/main/webapp/WEB-INF/classes/html/eu/invoiceTemplate.html
+++ b/war/src/main/webapp/WEB-INF/classes/html/eu/invoiceTemplate.html
@@ -1,4 +1,4 @@
-<div it-angular-blocks  extend-template="world/rest/html/get" id="world/rest/html/get">
+<div it-angular-blocks  extend-template="http://localhost:8080/world/rest/html/get" id="http://localhost:8080/eu/rest/html/get">
     <div data-block-append="content">
         <div class="form-group">
             <input it-input
