add js rest service, change representation of date into timestamp in json

--- a/war/src/main/webapp/WEB-INF/classes/html/eu/invoiceTemplate.html
+++ b/war/src/main/webapp/WEB-INF/classes/html/eu/invoiceTemplate.html
@@ -1,4 +1,4 @@
-<div it-angular-blocks  extend-template="http://localhost:8080/world/rest/html/get" id="http://localhost:8080/eu/rest/html/get">
+<it-angular-blocks  extend-template="'http://localhost:8080/world/rest/html/get'" id="http://localhost:8080/eu/rest/html/get">
     <div data-block-append="content">
         <div class="form-group">
             <input it-input
@@ -17,4 +17,4 @@
             </li>
         </ul>
     </div>
-</div>
+</it-angular-blocks>
