--- a/war/src/main/webapp/WEB-INF/classes/html/world/invoiceTemplate.html
+++ b/war/src/main/webapp/WEB-INF/classes/html/world/invoiceTemplate.html
@@ -1,4 +1,4 @@
-<div it-angular-blocks  extend-template="http://localhost:8080/api/rest/html/get" id="http://localhost:8080/world/rest/html/get">
+<it-angular-blocks extend-template="'http://localhost:8080/api/rest/html/get'" id="http://localhost:8080/world/rest/html/get">
     <div data-block-append="content">
         <br/>
         <br/>
@@ -35,4 +35,4 @@
     <div data-block="footer">
        <div></div>
     </div>
-</div>
+</it-angular-blocks>
