--- a/war/src/main/webapp/WEB-INF/classes/html/fr/invoiceTemplate.html
+++ b/war/src/main/webapp/WEB-INF/classes/html/fr/invoiceTemplate.html
@@ -1,4 +1,4 @@
-<div it-angular-blocks  extend-template="http://localhost:8080/eu/rest/html/get" id="http://localhost:8080/fr/rest/html/get">
+<it-angular-blocks extend-template="'http://localhost:8080/eu/rest/html/get'" id="http://localhost:8080/fr/rest/html/get">
     <!--Header is not overriden-->
     <div data-block-append="content">
         <div class="form-group">
@@ -70,4 +70,4 @@
                    ng-model="selectedInvoice.countryCode">
         </div>
     </div>
-</div>
+</it-angular-blocks>
